--- a/components/header.html
+++ b/components/header.html
@@ -14,7 +14,7 @@
     >
       <a href="/index.html" class="flex items-center gap-1 sm:gap-2">
         <img
-          src="../public/icon.png"
+          src="/public/icon.png"
           alt="Sunny Delights logo"
           class="h-5 w-auto sm:h-8"
         />
