--- a/components/footer.html
+++ b/components/footer.html
@@ -1,17 +1,14 @@
-<footer
-  class="bg-rose-500/80 text-white font-sans border-t border-rose-400"
-  style="text-shadow: 2px 2px 4px rgba(66, 62, 62, 0.7)"
->
+<footer class="bg-rose-300/80 font-sans border-t border-rose-400">
   <div
     class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 grid grid-cols-1 md:grid-cols-3 gap-8"
   >
     <!-- Socials -->
     <div class="flex flex-col space-y-2">
-      <p
-        class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
+      <h1
+        class="uppercase font-extrabold border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
       >
         Follow Us
-      </p>
+    </h1>
       <a
         class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
       >
@@ -37,11 +34,11 @@
 
     <!-- Information -->
     <div class="flex flex-col space-y-2">
-      <p
+      <h2
         class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
       >
         Information
-      </p>
+    </h2>
       <a
         href="../pages/about.html"
         class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
@@ -70,11 +67,11 @@
 
     <!-- More Sweetness -->
     <div class="flex flex-col space-y-2">
-      <p
+      <h3
         class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
       >
         More Sweetness
-      </p>
+    </h3>
       <a
         href="../pages/events.html"
         class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
